cleanup, remove intermediate class